[gd_scene load_steps=4 format=2]

[ext_resource path="res://levels/level1WaveBased/Waves/wave2.gd" type="Script" id=1]
[ext_resource path="res://levels/level1WaveBased/DiveZoneExtents.gd" type="Script" id=2]
[ext_resource path="res://levels/level1WaveBased/Debug.gd" type="Script" id=3]

[node name="waveStarter" type="Node2D"]
script = ExtResource( 1 )

[node name="viewport_hint" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -320, -180, -320, 180, 320, 180, 320, -180 )

[node name="GruntFormationPoints" type="Node2D" parent="."]
modulate = Color( 1, 0, 0, 1 )

[node name="C" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 97, -60 )

[node name="C2" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 135, -126 )

[node name="C3" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 115, -96 )

[node name="C4" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 71, -19 )

[node name="C8" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 67, 37 )

[node name="C9" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 90, 75 )

[node name="M" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 111, 108 )

[node name="M2" type="Position2D" parent="GruntFormationPoints"]
position = Vector2( 136, 134 )

[node name="DiveZoneExtents" type="Node2D" parent="."]
position = Vector2( 0, -7 )
script = ExtResource( 2 )
TopLeft = Vector2( -297, -168 )
BottomRight = Vector2( -70, 181 )

[node name="TopLeft" type="Position2D" parent="DiveZoneExtents"]
position = Vector2( -297, -168 )

[node name="BottomRight" type="Position2D" parent="DiveZoneExtents"]
position = Vector2( -70, 181 )

[node name="EyeZone" type="Node2D" parent="."]
script = ExtResource( 2 )
TopLeft = Vector2( 142, -180 )
BottomRight = Vector2( 320, 183 )

[node name="TopLeft" type="Position2D" parent="EyeZone"]
position = Vector2( 142, -180 )

[node name="BottomRight" type="Position2D" parent="EyeZone"]
position = Vector2( 320, 183 )

[node name="Spawners" type="Node2D" parent="."]
modulate = Color( 0.992157, 0.0823529, 1, 1 )

[node name="Position2D3" type="Position2D" parent="Spawners"]
position = Vector2( 228, -134 )

[node name="Position2D5" type="Position2D" parent="Spawners"]
position = Vector2( 229, -27 )

[node name="Position2D4" type="Position2D" parent="Spawners"]
position = Vector2( 225, 63 )

[node name="EnemyDump" type="Node2D" parent="."]

[node name="BulletsDump" type="Node2D" parent="."]

[node name="Debug" type="Label" parent="."]
anchor_left = -0.488
anchor_top = -0.486
anchor_right = -0.488
anchor_bottom = -0.486
margin_left = 161.0
margin_top = -169.0
margin_right = 290.0
margin_bottom = -155.0
script = ExtResource( 3 )
